// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-form renders 1`] = `
<ce-form>
  <!---->
  <div class="form" part="base" role="form">
    <form></form>
  </div>
</ce-form>
`;

exports[`sc-form renders 1`] = `
<sc-form>
  <!---->
  <div class="form" part="base" role="form">
    <form></form>
  </div>
</sc-form>
`;
